--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --primary-bcg-color: #ffffff;
   --secondary-bcg-color: #2f303a;
   --white-color: #ffffff;
-  --contact-icon-color: #757575;
+  --primary-social-icon-color: #afb1b8;
 }
 
 body {
@@ -134,7 +134,7 @@ img {
 }
 
 .contact-icon {
-  fill: var(--contact-icon-color);
+  fill: currentColor;
 }
 
 /*------------Стили основного контента------------*/
@@ -332,13 +332,23 @@ img {
 
   width: 44px;
   height: 44px;
+  background-color: transparent;
   border-radius: 50%;
-  outline: 1px solid salmon;
+}
+
+.social-link:hover {
+  background-color: var(--accent-color);
 }
 
 .social-icon {
   width: 20px;
   height: 20px;
+
+  fill: var(--primary-social-icon-color);
+}
+
+.social-icon:hover {
+  fill: var(--white-color);
 }
 
 .clients {
