--- a/css/styles.css
+++ b/css/styles.css
@@ -362,18 +362,26 @@ img {
 }
 
 .client-link {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 170px;
   height: 90px;
+
+  color: #afb1b8;
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
 }
 
+.client-link:hover,
+.client-link:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
+
 .client-icon {
-  fill: #afb1b8;
+  fill: currentColor;
 }
 
 .project {
