--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,16 @@ img {
   height: auto;
 }
 
+a:active,
+a:focus {
+  outline: none;
+}
+
+button:active,
+button:focus {
+  outline: none;
+}
+
 .list {
   padding: 0;
   margin: 0;
