Добавляет стили для иконок соц сетей в подвале при фокусе.

--- a/css/styles.css
+++ b/css/styles.css
@@ -557,7 +557,7 @@ footer {
 }
 
 .social-link.footer:hover,
-.project-item:focus {
+.social-link.footer:focus {
   background-color: var(--accent-color);
 }
 
